--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/checkinTabCtrl.js"></script>
+    <script src="js/controllers/homeTabCtrl.js"></script>
+    <script src="js/controllers/employeeLoginTabCtrl.js"></script>
+    <script src="js/controllers/employeeSignTabCtrl.js"></script>
+    <script src="js/controllers/userEmployeeTabCtrl.js"></script>
+
     <script src="js/services.js"></script>
 
     <script src="lib/jquery/jquery.js"></script>
@@ -21,24 +28,20 @@
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
     <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
 
+    <!-- date picker -->    
+    <script src="lib/jquery/ionic-datepicker.bundle.min.js"></script>
 
-    <!-- calendar
-    <script type="text/javascript" src="lib/jquery/jquery.timepicker.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/jquery/css/jquery.timepicker.css" />
 
-    <script type="text/javascript" src="lib/jquery/bootstrap-datepicker.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/jquery/css/bootstrap-datepicker.css" />
+    <link href="css/style.css" rel="stylesheet">
 
-    <script type="text/javascript" src="lib/jquery/site.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/jquery/css/site.css" />
-
-    <script src="lib/jquery/datepair.js"></script>
-    <script src="lib/jquery/jquery.datepair.js"></script>
-    -->
   </head>
 
   <body ng-controller="MainCtrl">
-
+    
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button class="button-icon button-clear ion-chevron-left">
+      </ion-nav-back-button>
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
     
   </body>
